fix with main